# Protein-Variant-Effect-Predictor

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
api/: deps.py  main.py
api/routes/: jobs.py  proteins.py  results.py  structures.py
api/services/: alphamissense_provider.py  annotation_client.py  annotation_service.py  job_service.py  protein_resolver.py  results_service.py  sifts_client.py  structure_client.py  structure_service.py  test_alphamissense.py  test_annotation_client.py  test_annotation_service.py  test_sifts_client.py  test_structure_client.py  test_uniprot_client.py  uniprot_client.py
benchmark/: README.md  calibrate.py  proteingym.py  run_benchmark.py  test_proteingym.py
contracts/: schemas.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_structure_source_url.py  0003_structure_pdb_lazy.py
domain/: derive.py  resolve.py  scoring.py  test_derive.py  test_resolve.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EffectHeatmap.tsx  PredictionForm.tsx  SingleScoreCard.tsx  StructureTrack.tsx  StructureViewer.tsx
frontend/lib/: api.ts  color.ts  impactColorTheme.ts  types.ts  usePrediction.ts
infra/: Dockerfile.api  Dockerfile.worker
scripts/: build_alphamissense_db.py
storage/: matrix_store.py  structure_store.py  test_matrix_store.py  test_structure_store.py
tests/: conftest.py  test_end_to_end.py  test_pdb_resolution.py  test_structure_precedence.py
worker/: main.py
worker/features/: __init__.py  dssp.py  test_dssp.py
worker/scorers/: esm2.py  test_esm2_smoke.py
