[project]
name = "protein-variant-effect-predictor"
version = "0.1.0"
description = "Multimodal protein variant effect predictor with 3D structure viewer"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "numpy>=1.26.0",
    "biopython>=1.84",
    "httpx>=0.27.0",
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
worker = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Test modules legitimately import after a pytest.importorskip / skip guard
# (torch, asyncpg, dssp) so the import doesn't blow up when the dep is absent.
"**/test_*.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["domain", "contracts", "db", "storage", "api", "worker", "benchmark", "tests"]
markers = [
    "network: tests that hit the real internet (UniProt, RCSB, etc.). Skip with -m 'not network'.",
    "integration: tests that require Postgres + Redis running (docker compose up postgres redis).",
]

[tool.setuptools]
py-modules = ["config"]

# Auto-discover packages rather than listing them explicitly. The split
# Docker images (thin API without worker/, worker without api/routes)
# each copy only a subset of the source, so a fixed package list can't
# match both. `find` adapts to whatever is present at build time; the
# include globs keep tests/ and other non-package dirs out of the wheel.
[tool.setuptools.packages.find]
include = [
    "contracts*",
    "domain*",
    "db*",
    "storage*",
    "api*",
    "worker*",
    "benchmark*",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
